--- a/experiments/original_strategies/original_strategies.ipynb
+++ b/experiments/original_strategies/original_strategies.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training on mps\n",
+      "Training on cpu\n",
       "Flower 1.15.1 / PyTorch 2.6.0\n"
      ]
     }
@@ -65,7 +65,6 @@
     "from flwr.server.strategy.aggregate import aggregate, weighted_loss_avg\n",
     "\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "DEVICE = \"mps\"\n",
     "print(f\"Training on {DEVICE}\")\n",
     "print(f\"Flower {flwr.__version__} / PyTorch {torch.__version__}\")\n",
     "disable_progress_bar()"
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,44 +177,6 @@
     "def get_parameters(net) -> List[np.ndarray]:\n",
     "    return [val.cpu().numpy() for _, val in net.state_dict().items()]\n",
     "\n",
-    "# def set_parameters(net, parameters):\n",
-    "#     \"\"\"Set model parameters from a list of NumPy arrays.\"\"\"\n",
-    "#     # Get current state dict to validate shape compatibility\n",
-    "#     current_state = OrderedDict(net.state_dict())\n",
-    "    \n",
-    "#     # Create parameter dictionary with explicit device placement and dtype preservation\n",
-    "#     params_dict = {}\n",
-    "#     for (name, current_tensor), param_array in zip(current_state.items(), parameters):\n",
-    "#         # Validate shape compatibility\n",
-    "#         if current_tensor.shape != torch.Size(param_array.shape):\n",
-    "#             raise ValueError(f\"Shape mismatch for {name}: expected {current_tensor.shape}, got {param_array.shape}\")\n",
-    "        \n",
-    "#         # Create tensor with same dtype as original and place on correct device\n",
-    "#         param_tensor = torch.tensor(param_array, dtype=current_tensor.dtype, device=current_tensor.device)\n",
-    "        \n",
-    "#         # Validate the tensor has valid values (not NaN or Inf)\n",
-    "#         if not torch.all(torch.isfinite(param_tensor)):\n",
-    "#             print(f\"WARNING: Parameter {name} contains NaN or Inf values. Clipping to valid range.\")\n",
-    "#             param_tensor = torch.nan_to_num(param_tensor, nan=0.0, posinf=1.0, neginf=-1.0)\n",
-    "            \n",
-    "#         params_dict[name] = param_tensor\n",
-    "    \n",
-    "#     # Create ordered dict for loading\n",
-    "#     state_dict = OrderedDict(params_dict)\n",
-    "    \n",
-    "#     # Print stats of a few parameters to debug\n",
-    "#     for name in list(state_dict.keys())[:3]:  # Just print first 3 params\n",
-    "#         tensor = state_dict[name]\n",
-    "#         print(f\"Updated {name}: shape={tensor.shape}, mean={tensor.mean().item():.6f}, std={tensor.std().item():.6f}\")\n",
-    "    \n",
-    "#     # Load state dict with strict flag to ensure all parameters are set\n",
-    "#     net.load_state_dict(state_dict, strict=True)\n",
-    "    \n",
-    "#     # Validate model has valid parameters after loading\n",
-    "#     for name, param in net.named_parameters():\n",
-    "#         if not torch.all(torch.isfinite(param)):\n",
-    "#             raise RuntimeError(f\"Parameter {name} contains NaN or Inf values after loading.\")\n",
-    "\n",
     "def set_parameters(net, parameters, trainable_layers=-1):\n",
     "    \"\"\"Set model parameters from a list of NumPy arrays.\"\"\"\n",
     "    current_state = OrderedDict(net.state_dict())\n",
@@ -239,7 +200,6 @@
     "            current_state[key] = torch.from_numpy(numpy_state[idx])\n",
     "        \n",
     "        net.load_state_dict(current_state, strict=True)\n",
-    "\n",
     "\n",
     "# def set_parameters(net, parameters: List[np.ndarray]):\n",
     "#     params_dict = zip(net.state_dict().keys(), parameters)\n",
@@ -441,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +416,7 @@
     "\n",
     "NETWORK_LEN = len(Net().state_dict().keys()) //2 \n",
     "EPOCHS = 8\n",
-    "NUM_PARTITIONS = 3\n",
+    "NUM_PARTITIONS = 6\n",
     "NUM_OF_CYCLES  = 1\n",
     "NUM_OF_FULL_UPDATES_BETWEEN_CYCLES = 2\n",
     "NUM_OF_ROUNDS = (NUM_OF_CYCLES * NUM_OF_FULL_UPDATES_BETWEEN_CYCLES) + (NUM_OF_CYCLES * NETWORK_LEN *2)\n",
@@ -466,102 +426,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "from flwr.common import NDArrays, Scalar\n",
     "import sys\n",
-    "# TEMPORARY\n",
+    "\n",
+    "# More robust evaluate function:\n",
     "def get_evaluate_fn(\n",
     "    testloader: DataLoader,\n",
     "    net: torch.nn.Module,\n",
     ") -> Callable[[int, NDArrays, Dict[str, Scalar]], Optional[Tuple[float, Dict[str, Scalar]]]]:\n",
     "    \"\"\"Return an evaluation function for server-side evaluation.\"\"\"\n",
-    "\n",
+    "    \n",
+    "    # used to check if they're changing\n",
+    "    previous_params = None\n",
+    "    \n",
     "    def evaluate(\n",
     "        server_round: int, parameters: NDArrays, config: Dict[str, Scalar]\n",
     "    ) -> Optional[Tuple[float, Dict[str, Scalar]]]:\n",
     "        \"\"\"Use the entire test set for evaluation.\"\"\"\n",
+    "        nonlocal previous_params\n",
     "        \n",
-    "        # Copy model parameters to avoid modifying the original\n",
+    "        print(f\"\\n==== Server-side evaluation for round {server_round} ====\")\n",
+    "        \n",
+    "        # Check if parameters changed from previous round\n",
+    "        if previous_params is not None:\n",
+    "            param_change = False\n",
+    "            for i, (prev, curr) in enumerate(zip(previous_params, parameters)):\n",
+    "                diff = np.abs(prev - curr).mean()\n",
+    "                if diff > 1e-6:\n",
+    "                    param_change = True\n",
+    "                    print(f\"  Parameter {i}: Changed by {diff:.6f}\")\n",
+    "            \n",
+    "            if not param_change:\n",
+    "                print(\"  WARNING: Parameters haven't changed from previous round!\")\n",
+    "        \n",
+    "        previous_params = [p.copy() for p in parameters]\n",
     "        net_copy = copy.deepcopy(net)\n",
-    "        \n",
+    "\n",
     "        # Update model with the latest parameters\n",
     "        params_dict = zip(net_copy.state_dict().keys(), parameters)\n",
-    "        state_dict = OrderedDict({k: torch.tensor(v) for k, v in params_dict})\n",
-    "        net_copy.load_state_dict(state_dict, strict=True)\n",
+    "        state_dict = OrderedDict({k: torch.tensor(v, device=DEVICE) for k, v in params_dict})\n",
     "        \n",
+    "        # Check if state dict keys match model keys\n",
+    "        model_keys = set(net_copy.state_dict().keys())\n",
+    "        params_keys = set(state_dict.keys())\n",
+    "        if model_keys != params_keys:\n",
+    "            print(f\"  WARNING: Key mismatch between model and parameters!\")\n",
+    "            print(f\"  Missing in params: {model_keys - params_keys}\")\n",
+    "            print(f\"  Extra in params: {params_keys - model_keys}\")\n",
+    "        \n",
+    "        net_copy.load_state_dict(state_dict, strict=True)\n",
     "        net_copy.to(DEVICE)\n",
     "        net_copy.eval()\n",
-    "\n",
+    "        \n",
     "        # Test the model\n",
     "        loss, accuracy = test(net_copy, testloader)\n",
+    "        print(f\"  Evaluation results - Loss: {loss:.4f}, Accuracy: {accuracy:.4f}\")\n",
     "        \n",
     "        # Return loss and metrics\n",
     "        return loss, {\"accuracy\": accuracy}\n",
-    "\n",
+    "    \n",
     "    return evaluate\n",
-    "\n",
-    "# def get_evaluate_fn(\n",
-    "#     testloader: DataLoader,\n",
-    "#     net: torch.nn.Module,\n",
-    "# ) -> Callable[[int, NDArrays, Dict[str, Scalar]], Optional[Tuple[float, Dict[str, Scalar]]]]:\n",
-    "#     \"\"\"Return an evaluation function for server-side evaluation.\"\"\"\n",
-    "    \n",
-    "#     # Store previous parameters to check if they're changing\n",
-    "#     previous_params = None\n",
-    "    \n",
-    "#     def evaluate(\n",
-    "#         server_round: int, parameters: NDArrays, config: Dict[str, Scalar]\n",
-    "#     ) -> Optional[Tuple[float, Dict[str, Scalar]]]:\n",
-    "#         \"\"\"Use the entire test set for evaluation.\"\"\"\n",
-    "#         nonlocal previous_params\n",
-    "        \n",
-    "#         print(f\"\\n==== Server-side evaluation for round {server_round} ====\")\n",
-    "        \n",
-    "#         # Check if parameters changed from previous round\n",
-    "#         if previous_params is not None:\n",
-    "#             param_change = False\n",
-    "#             for i, (prev, curr) in enumerate(zip(previous_params, parameters)):\n",
-    "#                 diff = np.abs(prev - curr).mean()\n",
-    "#                 if diff > 1e-6:\n",
-    "#                     param_change = True\n",
-    "#                     print(f\"  Parameter {i}: Changed by {diff:.6f}\")\n",
-    "            \n",
-    "#             if not param_change:\n",
-    "#                 print(\"  WARNING: Parameters haven't changed from previous round!\")\n",
-    "        \n",
-    "#         # Update previous params for next round\n",
-    "#         previous_params = [p.copy() for p in parameters]\n",
-    "        \n",
-    "#         # Copy model parameters to avoid modifying the original\n",
-    "#         net_copy = copy.deepcopy(net)\n",
-    "        \n",
-    "#         # Update model with the latest parameters\n",
-    "#         params_dict = zip(net_copy.state_dict().keys(), parameters)\n",
-    "#         state_dict = OrderedDict({k: torch.tensor(v, device=DEVICE) for k, v in params_dict})\n",
-    "        \n",
-    "#         # Check if state dict keys match model keys\n",
-    "#         model_keys = set(net_copy.state_dict().keys())\n",
-    "#         params_keys = set(state_dict.keys())\n",
-    "#         if model_keys != params_keys:\n",
-    "#             print(f\"  WARNING: Key mismatch between model and parameters!\")\n",
-    "#             print(f\"  Missing in params: {model_keys - params_keys}\")\n",
-    "#             print(f\"  Extra in params: {params_keys - model_keys}\")\n",
-    "        \n",
-    "#         net_copy.load_state_dict(state_dict, strict=True)\n",
-    "#         net_copy.to(DEVICE)\n",
-    "#         net_copy.eval()\n",
-    "        \n",
-    "#         # Test the model\n",
-    "#         loss, accuracy = test(net_copy, testloader)\n",
-    "#         print(f\"  Evaluation results - Loss: {loss:.4f}, Accuracy: {accuracy:.4f}\")\n",
-    "        \n",
-    "#         # Return loss and metrics\n",
-    "#         return loss, {\"accuracy\": accuracy}\n",
-    "    \n",
-    "#     return evaluate\n",
     "\n",
     "\n",
     "\n",
@@ -613,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -777,52 +705,6 @@
     "        # Return client/config pairs\n",
     "        return [(client, evaluate_ins) for client in clients]\n",
     "\n",
-    "# TEMPORARY \n",
-    "    # def aggregate_fit(\n",
-    "    #     self,\n",
-    "    #     server_round: int,\n",
-    "    #     results: List[Tuple[ClientProxy, FitRes]],\n",
-    "    #     failures: List[Union[Tuple[ClientProxy, FitRes], BaseException]],\n",
-    "    # ) -> Tuple[Optional[Parameters], Dict[str, Scalar]]:\n",
-    "    #     \"\"\"Aggregate fit results using weighted average.\"\"\"\n",
-    "    #     print(f\"\\n==== Aggregating parameters for round {server_round} ====\")\n",
-    "    #     print(f\"  Number of client results: {len(results)}\")\n",
-    "        \n",
-    "    #     # get size of parameters in bytes\n",
-    "    #     total_size = 0\n",
-    "    #     for client, fit_res in results:\n",
-    "    #         total_size += get_parameters_size(fit_res.parameters) * 2\n",
-    "        \n",
-    "    #     if server_round in fed_avg_result:\n",
-    "    #         expand_fed_avg_result = {**fed_avg_result[server_round], \"total_size\": total_size}\n",
-    "    #     else:\n",
-    "    #         expand_fed_avg_result = {\"total_size\": total_size}\n",
-    "        \n",
-    "    #     fed_avg_result[server_round] = expand_fed_avg_result\n",
-    "        \n",
-    "    #     # Check client results for significant differences\n",
-    "    #     if len(results) >= 2:\n",
-    "    #         client_params = [parameters_to_ndarrays(fit_res.parameters) for _, fit_res in results]\n",
-    "            \n",
-    "    #         # Compare first two clients' parameters\n",
-    "    #         diff_sum = 0\n",
-    "    #         for i, (param1, param2) in enumerate(zip(client_params[0], client_params[1])):\n",
-    "    #             diff = np.abs(param1 - param2).mean()\n",
-    "    #             diff_sum += diff\n",
-    "    #             if i < 5:  # Print first few layers only to avoid too much output\n",
-    "    #                 print(f\"  Layer {i} diff between clients: {diff:.6f}\")\n",
-    "            \n",
-    "    #         print(f\"  Average parameter difference between clients: {diff_sum/len(client_params[0]):.6f}\")\n",
-    "        \n",
-    "    #     weights_results = [\n",
-    "    #         (parameters_to_ndarrays(fit_res.parameters), fit_res.num_examples)\n",
-    "    #         for _, fit_res in results\n",
-    "    #     ]\n",
-    "        \n",
-    "    #     parameters_aggregated = ndarrays_to_parameters(aggregate(weights_results))\n",
-    "    #     metrics_aggregated = {}\n",
-    "        \n",
-    "    #     return parameters_aggregated, metrics_aggregated\n",
     "    def aggregate_fit(\n",
     "        self,\n",
     "        server_round: int,\n",
@@ -889,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1170,7 +1052,9 @@
       "\u001b[36m(ClientAppActor pid=26351)\u001b[0m Epoch 2: train loss 0.014212925918400288, accuracy 0.8389709742743569\u001b[32m [repeated 2x across cluster]\u001b[0m\n",
       "\u001b[36m(ClientAppActor pid=26353)\u001b[0m Epoch 3: train loss 0.010091420263051987, accuracy 0.8883888388838884\n",
       "\u001b[36m(ClientAppActor pid=26352)\u001b[0m Epoch 2: train loss 0.014256074093282223, accuracy 0.8392709817745444\n",
-      "\u001b[36m(ClientAppActor pid=26353)\u001b[0m Epoch 4: train loss 0.007475954480469227, accuracy 0.9160666066606661\u001b[32m [repeated 2x across cluster]\u001b[0m\n"
+      "\u001b[36m(ClientAppActor pid=26353)\u001b[0m Epoch 4: train loss 0.007475954480469227, accuracy 0.9160666066606661\u001b[32m [repeated 2x across cluster]\u001b[0m\n",
+      "\u001b[36m(ClientAppActor pid=26353)\u001b[0m Epoch 5: train loss 0.0060192253440618515, accuracy 0.9326432643264326\n",
+      "\u001b[36m(ClientAppActor pid=26352)\u001b[0m Epoch 3: train loss 0.010061906650662422, accuracy 0.8858471461786545\n"
      ]
     }
    ],
@@ -1277,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1367,66 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mINFO \u001b[0m:      Starting Flower ServerApp, config: num_rounds=20, no round_timeout\n",
+      "\u001b[92mINFO \u001b[0m:      \n",
+      "\u001b[92mINFO \u001b[0m:      [INIT]\n",
+      "\u001b[92mINFO \u001b[0m:      Using initial global parameters provided by strategy\n",
+      "\u001b[92mINFO \u001b[0m:      Starting evaluation of initial global parameters\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initializing global model parameters\n",
+      "Global init param 0: shape=(32, 3, 3, 3), mean=0.001741, std=0.112499\n",
+      "Global init param 1: shape=(32,), mean=0.011245, std=0.122499\n",
+      "Global init param 2: shape=(64, 32, 3, 3), mean=-0.000072, std=0.033968\n",
+      "Global init param 3: shape=(64,), mean=0.002386, std=0.033743\n",
+      "Global init param 4: shape=(128, 64, 3, 3), mean=0.000095, std=0.024095\n",
+      "Global init param 5: shape=(128,), mean=0.002493, std=0.024324\n",
+      "Global init param 6: shape=(128, 128, 3, 3), mean=-0.000037, std=0.017028\n",
+      "Global init param 7: shape=(128,), mean=-0.000770, std=0.016107\n",
+      "Global init param 8: shape=(256, 128, 3, 3), mean=-0.000027, std=0.016985\n",
+      "Global init param 9: shape=(256,), mean=0.001210, std=0.016608\n",
+      "Global init param 10: shape=(256, 256, 3, 3), mean=0.000009, std=0.012009\n",
+      "Global init param 11: shape=(256,), mean=-0.000338, std=0.012563\n",
+      "Global init param 12: shape=(1024, 4096), mean=-0.000006, std=0.009020\n",
+      "Global init param 13: shape=(1024,), mean=-0.000122, std=0.009008\n",
+      "Global init param 14: shape=(512, 1024), mean=-0.000047, std=0.018037\n",
+      "Global init param 15: shape=(512,), mean=-0.000623, std=0.017951\n",
+      "Global init param 16: shape=(10, 512), mean=0.000112, std=0.025984\n",
+      "Global init param 17: shape=(10,), mean=0.000054, std=0.016862\n",
+      "\n",
+      "==== Server-side evaluation for round 0 ====\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[92mINFO \u001b[0m:      initial parameters (loss, other metrics): 0.07207727766036988, {'accuracy': 0.1}\n",
+      "\u001b[92mINFO \u001b[0m:      \n",
+      "\u001b[92mINFO \u001b[0m:      [ROUND 1]\n",
+      "\u001b[92mINFO \u001b[0m:      configure_fit: strategy sampled 3 clients (out of 3)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Evaluation results - Loss: 0.0721, Accuracy: 0.1000\n",
+      "\u001b[36m(ClientAppActor pid=27171)\u001b[0m [Client 0] fit, config: {'proximal_mu': 0.1}\n",
+      "\u001b[36m(ClientAppActor pid=27171)\u001b[0m Epoch 1: train loss 0.06186716631054878, accuracy 0.23970599264981624\n",
+      "\u001b[36m(ClientAppActor pid=27170)\u001b[0m [Client 1] fit, config: {'proximal_mu': 0.1}\u001b[32m [repeated 2x across cluster] (Ray deduplicates logs by default. Set RAY_DEDUP_LOGS=0 to disable log deduplication, or see https://docs.ray.io/en/master/ray-observability/ray-logging.html#log-deduplication for more options.)\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "net = Net().to(DEVICE)\n",
     "\n",
