--- a/experiments/original_strategies/original_strategies_clinet_dropout.ipynb
+++ b/experiments/original_strategies/original_strategies_clinet_dropout.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
     "def train(net, trainloader, epochs: int):\n",
     "    \"\"\"Train the network on the training set.\"\"\"\n",
     "    criterion = torch.nn.CrossEntropyLoss()\n",
-    "    optimizer = torch.optim.Adam(net.parameters(),betas=(0.999,0.999))\n",
+    "    optimizer = torch.optim.Adam(net.parameters())\n",
     "    net.train()\n",
     "    for epoch in range(epochs):\n",
     "        correct, total, epoch_loss = 0, 0, 0.0\n",
@@ -248,7 +248,7 @@
     "            images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
     "            optimizer.zero_grad()\n",
     "            outputs = net(images)\n",
-    "            loss = criterion(net(images), labels)\n",
+    "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            # Metrics\n",
@@ -456,42 +456,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from flwr.common import NDArrays, Scalar\n",
     "import sys\n",
+    "\n",
+    "# More robust evaluate function:\n",
     "def get_evaluate_fn(\n",
     "    testloader: DataLoader,\n",
     "    net: torch.nn.Module,\n",
     ") -> Callable[[int, NDArrays, Dict[str, Scalar]], Optional[Tuple[float, Dict[str, Scalar]]]]:\n",
     "    \"\"\"Return an evaluation function for server-side evaluation.\"\"\"\n",
-    "\n",
+    "    \n",
+    "    # used to check if they're changing\n",
+    "    previous_params = None\n",
+    "    \n",
     "    def evaluate(\n",
     "        server_round: int, parameters: NDArrays, config: Dict[str, Scalar]\n",
     "    ) -> Optional[Tuple[float, Dict[str, Scalar]]]:\n",
     "        \"\"\"Use the entire test set for evaluation.\"\"\"\n",
+    "        nonlocal previous_params\n",
     "        \n",
-    "        # Copy model parameters to avoid modifying the original\n",
+    "        print(f\"\\n==== Server-side evaluation for round {server_round} ====\")\n",
+    "        \n",
+    "        # Check if parameters changed from previous round\n",
+    "        if previous_params is not None:\n",
+    "            param_change = False\n",
+    "            for i, (prev, curr) in enumerate(zip(previous_params, parameters)):\n",
+    "                diff = np.abs(prev - curr).mean()\n",
+    "                if diff > 1e-6:\n",
+    "                    param_change = True\n",
+    "                    print(f\"  Parameter {i}: Changed by {diff:.6f}\")\n",
+    "            \n",
+    "            if not param_change:\n",
+    "                print(\"  WARNING: Parameters haven't changed from previous round!\")\n",
+    "        \n",
+    "        previous_params = [p.copy() for p in parameters]\n",
     "        net_copy = copy.deepcopy(net)\n",
-    "        \n",
+    "\n",
     "        # Update model with the latest parameters\n",
     "        params_dict = zip(net_copy.state_dict().keys(), parameters)\n",
-    "        state_dict = OrderedDict({k: torch.tensor(v) for k, v in params_dict})\n",
-    "        net_copy.load_state_dict(state_dict, strict=True)\n",
+    "        state_dict = OrderedDict({k: torch.tensor(v, device=DEVICE) for k, v in params_dict})\n",
     "        \n",
+    "        # Check if state dict keys match model keys\n",
+    "        model_keys = set(net_copy.state_dict().keys())\n",
+    "        params_keys = set(state_dict.keys())\n",
+    "        if model_keys != params_keys:\n",
+    "            print(f\"  WARNING: Key mismatch between model and parameters!\")\n",
+    "            print(f\"  Missing in params: {model_keys - params_keys}\")\n",
+    "            print(f\"  Extra in params: {params_keys - model_keys}\")\n",
+    "        \n",
+    "        net_copy.load_state_dict(state_dict, strict=True)\n",
     "        net_copy.to(DEVICE)\n",
     "        net_copy.eval()\n",
-    "\n",
+    "        \n",
     "        # Test the model\n",
     "        loss, accuracy = test(net_copy, testloader)\n",
+    "        print(f\"  Evaluation results - Loss: {loss:.4f}, Accuracy: {accuracy:.4f}\")\n",
     "        \n",
     "        # Return loss and metrics\n",
     "        return loss, {\"accuracy\": accuracy}\n",
-    "\n",
+    "    \n",
     "    return evaluate\n",
-    "\n",
     "\n",
     "\n",
     "def get_evaluate_fn_moon(\n",
