--- a/experiments/fedpart_strategies/fedpart_strategies_data_heterogenity.ipynb
+++ b/experiments/fedpart_strategies/fedpart_strategies_data_heterogenity.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
     "def train(net, trainloader, epochs: int):\n",
     "    \"\"\"Train the network on the training set.\"\"\"\n",
     "    criterion = torch.nn.CrossEntropyLoss()\n",
-    "    optimizer = torch.optim.Adam(net.parameters(),betas=(0.999,0.999))\n",
+    "    optimizer = torch.optim.Adam(net.parameters())\n",
     "    net.train()\n",
     "    for epoch in range(epochs):\n",
     "        correct, total, epoch_loss = 0, 0, 0.0\n",
@@ -249,7 +249,7 @@
     "            images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
     "            optimizer.zero_grad()\n",
     "            outputs = net(images)\n",
-    "            loss = criterion(net(images), labels)\n",
+    "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            # Metrics\n",
