--- a/experiments/inintial_fedpart_experiments.ipynb
+++ b/experiments/inintial_fedpart_experiments.ipynb
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
     "def train(net, trainloader, epochs: int):\n",
     "    \"\"\"Train the network on the training set.\"\"\"\n",
     "    criterion = torch.nn.CrossEntropyLoss()\n",
-    "    optimizer = torch.optim.Adam(net.parameters(),betas=(0.999,0.999))\n",
+    "    optimizer = torch.optim.Adam(net.parameters())\n",
     "    net.train()\n",
     "    for epoch in range(epochs):\n",
     "        correct, total, epoch_loss = 0, 0, 0.0\n",
@@ -248,7 +248,7 @@
     "            images, labels = images.to(DEVICE), labels.to(DEVICE)\n",
     "            optimizer.zero_grad()\n",
     "            outputs = net(images)\n",
-    "            loss = criterion(net(images), labels)\n",
+    "            loss = criterion(outputs, labels)\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
     "            # Metrics\n",
@@ -3020,7 +3020,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "fl_proj",
    "language": "python",
    "name": "python3"
   },
@@ -3034,7 +3034,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
