fixed velocity issue

--- a/experiments/fedmom_strategies/fedproxmom/fedprox_velocity_client_dropout.ipynb
+++ b/experiments/fedmom_strategies/fedproxmom/fedprox_velocity_client_dropout.ipynb
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
    ],
    "source": [
     "\n",
-    "NETWORK_LEN = len(Net().state_dict().keys())\n",
+    "NETWORK_LEN = len(Net().state_dict().keys()) // 2\n",
     "EPOCHS = 8\n",
     "NUM_PARTITIONS = 3\n",
     "NUM_OF_CYCLES  = 1\n",
@@ -737,8 +737,8 @@
     "            trained_layers = parameters\n",
     "        else:\n",
     "            trained_layers = [\n",
-    "                parameters[config[\"trainable_layers\"]],\n",
-    "                parameters[config[\"trainable_layers\"] + 1]\n",
+    "                parameters[config[\"trainable_layers\"] * 2],\n",
+    "                parameters[config[\"trainable_layers\"] * 2 + 1]\n",
     "            ]\n",
     "        \n",
     "        return trained_layers\n",
