--- a/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_client_dropout.ipynb
+++ b/experiments/fedmom_strategies/fedavgmom/fedavg_velocity_client_dropout.ipynb
@@ -276,7 +276,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "NETWORK_LEN = len(Net().state_dict().keys())\n",
+    "NETWORK_LEN = len(Net().state_dict().keys()) // 2\n",
     "EPOCHS = 8\n",
     "NUM_PARTITIONS = 3\n",
     "NUM_OF_CYCLES  = 1\n",
@@ -721,8 +721,8 @@
     "            trained_layers = parameters\n",
     "        else:\n",
     "            trained_layers = [\n",
-    "                parameters[config[\"trainable_layers\"]],\n",
-    "                parameters[config[\"trainable_layers\"] + 1]\n",
+    "                parameters[config[\"trainable_layers\"] * 2],\n",
+    "                parameters[config[\"trainable_layers\"] * 2 + 1]\n",
     "            ]\n",
     "        \n",
     "        return trained_layers\n",
