small fix of moon

--- a/experiments/data_heterogenity.ipynb
+++ b/experiments/data_heterogenity.ipynb
@@ -8224,7 +8224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8244,8 +8244,11 @@
     "        if config[\"trainable_layers\"] == -1:\n",
     "            return parameters\n",
     "        \n",
-    "        trained_layer = parameters[config[\"trainable_layers\"]]\n",
-    "        return [trained_layer]\n",
+    "        trained_layers = [\n",
+    "            parameters[config[\"trainable_layers\"]],\n",
+    "            parameters[config[\"trainable_layers\"] + 1]\n",
+    "        ]\n",
+    "        return trained_layers\n",
     "\n",
     "    def fit(self, parameters, config):\n",
     "        print(f\"[Client {self.partition_id}] fit, config: {config}\")\n",
