--- a/experiments/fedmom_strategies/fedproxmom/fedprox_velocity.ipynb
+++ b/experiments/fedmom_strategies/fedproxmom/fedprox_velocity.ipynb
@@ -932,10 +932,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'results/fed_part_prox_momentum_result.p', 'wb') as file:\n",
+    "with open(f'results/fppm_results.p', 'wb') as file:\n",
     "    pickle.dump(fed_part_avg_result, file)\n",
     "\n",
-    "with open(f'results/fed_part_prox_momentum_model_results.p', 'wb') as file:\n",
+    "with open(f'results/fppm_model_results.p', 'wb') as file:\n",
     "    pickle.dump(fed_part_avg_model_results, file)"
    ]
   },
@@ -1547,10 +1547,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'results/fed_momentum_weighting_results.p', 'wb') as file:\n",
+    "with open(f'results/weighted_fppm_results.p', 'wb') as file:\n",
     "    pickle.dump(fed_momentum_weighting_results, file)\n",
     "\n",
-    "with open(f'results/fed_momentum_weighting_model_results.p', 'wb') as file:\n",
+    "with open(f'results/weighted_fppm_model_results.p', 'wb') as file:\n",
     "    pickle.dump(fed_momentum_weighting_model_results, file)"
    ]
   },
