--- a/experiments/fedpart_strategies/fedpart_strategies_data_heterogenity.ipynb
+++ b/experiments/fedpart_strategies/fedpart_strategies_data_heterogenity.ipynb
@@ -93,6 +93,7 @@
     "from flwr.server.strategy.aggregate import aggregate, weighted_loss_avg\n",
     "\n",
     "DEVICE = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "DEVICE = \"mps\"\n",
     "print(f\"Training on {DEVICE}\")\n",
     "print(f\"Flower {flwr.__version__} / PyTorch {torch.__version__}\")\n",
     "disable_progress_bar()"
@@ -298,7 +299,9 @@
     "\n",
     "    previous_net.eval()\n",
     "    global_net.eval()\n",
-    "\n",
+    "    net.to(DEVICE)\n",
+    "    previous_net.to(DEVICE)\n",
+    "    global_net.to(DEVICE)\n",
     "    cnt = 0\n",
     "    cos = torch.nn.CosineSimilarity(dim=-1)\n",
     "\n",
@@ -327,7 +330,7 @@
     "            nega = cos(pro1, pro3)\n",
     "            logits = torch.cat((logits, nega.reshape(-1, 1)), dim=1)\n",
     "\n",
-    "            previous_net.to(\"cpu\")\n",
+    "            previous_net.to(DEVICE)\n",
     "            logits /= temperature\n",
     "            labels = torch.zeros(x.size(0)).to(DEVICE).long()\n",
     "\n",
@@ -463,35 +466,65 @@
    "source": [
     "from flwr.common import NDArrays, Scalar\n",
     "import sys\n",
+    "\n",
+    "\n",
     "def get_evaluate_fn(\n",
     "    testloader: DataLoader,\n",
     "    net: torch.nn.Module,\n",
     ") -> Callable[[int, NDArrays, Dict[str, Scalar]], Optional[Tuple[float, Dict[str, Scalar]]]]:\n",
     "    \"\"\"Return an evaluation function for server-side evaluation.\"\"\"\n",
-    "\n",
+    "    \n",
+    "    # used to check if they're changing\n",
+    "    previous_params = None\n",
+    "    \n",
     "    def evaluate(\n",
     "        server_round: int, parameters: NDArrays, config: Dict[str, Scalar]\n",
     "    ) -> Optional[Tuple[float, Dict[str, Scalar]]]:\n",
     "        \"\"\"Use the entire test set for evaluation.\"\"\"\n",
+    "        nonlocal previous_params\n",
     "        \n",
-    "        # Copy model parameters to avoid modifying the original\n",
+    "        print(f\"\\n==== Server-side evaluation for round {server_round} ====\")\n",
+    "        \n",
+    "        # Check if parameters changed from previous round\n",
+    "        if previous_params is not None:\n",
+    "            param_change = False\n",
+    "            for i, (prev, curr) in enumerate(zip(previous_params, parameters)):\n",
+    "                diff = np.abs(prev - curr).mean()\n",
+    "                if diff > 1e-6:\n",
+    "                    param_change = True\n",
+    "                    print(f\"  Parameter {i}: Changed by {diff:.6f}\")\n",
+    "            \n",
+    "            if not param_change:\n",
+    "                print(\"  WARNING: Parameters haven't changed from previous round!\")\n",
+    "        \n",
+    "        previous_params = [p.copy() for p in parameters]\n",
     "        net_copy = copy.deepcopy(net)\n",
-    "        \n",
+    "\n",
     "        # Update model with the latest parameters\n",
     "        params_dict = zip(net_copy.state_dict().keys(), parameters)\n",
-    "        state_dict = OrderedDict({k: torch.tensor(v) for k, v in params_dict})\n",
-    "        net_copy.load_state_dict(state_dict, strict=True)\n",
+    "        state_dict = OrderedDict({k: torch.tensor(v, device=DEVICE) for k, v in params_dict})\n",
     "        \n",
+    "        # Check if state dict keys match model keys\n",
+    "        model_keys = set(net_copy.state_dict().keys())\n",
+    "        params_keys = set(state_dict.keys())\n",
+    "        if model_keys != params_keys:\n",
+    "            print(f\"  WARNING: Key mismatch between model and parameters!\")\n",
+    "            print(f\"  Missing in params: {model_keys - params_keys}\")\n",
+    "            print(f\"  Extra in params: {params_keys - model_keys}\")\n",
+    "        \n",
+    "        net_copy.load_state_dict(state_dict, strict=True)\n",
     "        net_copy.to(DEVICE)\n",
     "        net_copy.eval()\n",
-    "\n",
+    "        \n",
     "        # Test the model\n",
     "        loss, accuracy = test(net_copy, testloader)\n",
+    "        print(f\"  Evaluation results - Loss: {loss:.4f}, Accuracy: {accuracy:.4f}\")\n",
     "        \n",
     "        # Return loss and metrics\n",
     "        return loss, {\"accuracy\": accuracy}\n",
-    "\n",
+    "    \n",
     "    return evaluate\n",
+    "\n",
     "\n",
     "\n",
     "\n",
@@ -957,7 +990,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'results/fed_part_avg_data_heterogenity_result.p', 'wb') as file:\n",
+    "with open(f'results/fed_part_avg_data_heterogenity_results.p', 'wb') as file:\n",
     "    pickle.dump(fed_part_avg_result, file)\n",
     "\n",
     "with open(f'results/fed_part_avg_model_data_heterogenity_results.p', 'wb') as file:\n",
@@ -1286,7 +1319,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'results/fed_part_prox_data_heterogenity_result.p', 'wb') as file:\n",
+    "with open(f'results/fed_part_prox_data_heterogenity_results.p', 'wb') as file:\n",
     "    pickle.dump(fed_part_prox_result, file)\n",
     "\n",
     "with open(f'results/fed_part_prox_model_data_heterogenity_results.p', 'wb') as file:\n",
@@ -1829,7 +1862,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(f'results/fed_moon_data_heterogenity_result.p', 'wb') as file:\n",
+    "with open(f'results/fed_moon_data_heterogenity_results.p', 'wb') as file:\n",
     "    pickle.dump(fed_moon_result, file)\n",
     "\n",
     "with open(f'results/fed_moon_model_data_heterogenity_results.p', 'wb') as file:\n",
